--- a/www/themes/nobleui/backend/assets/css/custom.css
+++ b/www/themes/nobleui/backend/assets/css/custom.css
@@ -24,6 +24,7 @@ body {
     background-color: #ffffff;
 }
 
+
 .btn, .fc .fc-button, .swal2-modal .swal2-actions button, .wizard > .actions a, .wizard > .actions a:hover, .wizard > .actions .disabled a {
     font-weight: 100;
 }
@@ -64,7 +65,7 @@ a {
     margin-bottom: 1rem;
 }
 
-.form-group label,.filter-breadcrumb.breadcrumb a {
+.form-group label, .filter-breadcrumb.breadcrumb a {
     /* font-size: 1.3rem; */
     color: #5e6c84;
     font-size: 13px;
@@ -121,7 +122,7 @@ a {
 }
 
 .card .card-body {
-    padding: 2.5rem 2.5rem 1.5rem 1.5rem;
+    padding: 0 1.5rem 1.5rem;
 }
 
 .card-body .field-repeater li.field-repeater-item {
