--- a/www/plugins/demo/core/templates/seed.file.twig
+++ b/www/plugins/demo/core/templates/seed.file.twig
@@ -30,7 +30,7 @@ class {{ className }} implements Seedable
             {%elseif value is empty %}
                 {% set phpString =  '"'~key~'"' ~ '=> null'%}
             {% else %}
-                {% set phpString =  '"'~key~'"' ~ '=>' ~ '"'~value|replace({'$':'\\$','\n':'\\n', "\r":'\\r','"':'\"'})~'"' %}
+                {% set phpString =  '"'~key~'"' ~ '=>' ~ '"'~value|replace({'$':'\\$','\n':'\\n', "\r":'\\r','"':'\\"'})~'"' %}
             {% endif %}
             {% if loop.last == false %}
                 {{ phpString|raw}},
