--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -27,7 +27,7 @@ use System\Models\Parameter;
     <link href="<?= Url::asset('modules/system/assets/ui/storm.css') ?>?v<?= $coreBuild ?>" rel="stylesheet">
    <link href="<?= Backend::skinAsset('assets/css/october.css')?>?v<?= $coreBuild ?>" rel="stylesheet">
     <!--Dependency loader for node modules -->
-    <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/assets/js/bundle.js') ?>"></script>">
+    <script src="<?= url('browserify/bundle.js') ?>"></script>">
 
     <!--<script src="<? /*= Backend::skinAsset('assets/js/vendor/jquery.min.js') */ ?>?v<? /*= $coreBuild */ ?>"></script>-->
     <script src="<?= Backend::skinAsset('assets/vendors/core/core.js') ?>"></script>
