--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -26,8 +26,7 @@ use System\Models\Parameter;
     ?>
     <link href="<?= Url::asset('modules/system/assets/ui/storm.css') ?>?v<?= $coreBuild ?>" rel="stylesheet">
    <link href="<?= Backend::skinAsset('assets/css/october.css')?>?v<?= $coreBuild ?>" rel="stylesheet">
-    <!--Dependency loader for node modules -->
-    <script src="<?= url('browserify/bundle.js') ?>"></script>">
+
 
     <!--<script src="<? /*= Backend::skinAsset('assets/js/vendor/jquery.min.js') */ ?>?v<? /*= $coreBuild */ ?>"></script>-->
     <script src="<?= Backend::skinAsset('assets/vendors/core/core.js') ?>"></script>
@@ -56,15 +55,12 @@ use System\Models\Parameter;
     <!-- Layout styles -->
     <link rel="stylesheet" href="<?= Backend::skinAsset("assets/css/demo_1/style.css") ?>">
     <!-- End layout styles -->
+    <!--Dependency loader for node modules -->
     <script src="<?= url('/plugins/demo/core/formwidgets/querybuilderwidget/assets/js/query-builder.standalone.min.js') ?>"></script>
     <script src="<?= url('/modules/backend/widgets/lists/assets/js/october.list.js', 'core'); ?>"></script>
     <script src="<?= Backend::skinAsset('assets/vendors/loading-overlay/loadingoverlay.min.js') ?>"></script>
     <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
-    <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.js') ?>"></script>
-    <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.ui.js') ?>"></script>
-    <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.component.js') ?>"></script>
-    <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.filter.js') ?>"></script>
-    <script src="<?= url('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.pagination.js') ?>"></script>
+    <script src="<?= url('browserify/dist/webpack.bundle.js') ?>"></script>">
     <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
     <?php $this->addCss('/plugins/demo/core/formwidgets/querybuilderwidget/assets/css/query-builder.default.min.css') ?>
 
