--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -39,7 +39,6 @@ use System\Models\Parameter;
 
     <script src="<?= Backend::skinAsset('assets/js/october.flyout.js') ?>"></script>
     <script src="<?= Backend::skinAsset('assets/js/october.tabformexpandcontrols.js') ?>"></script>
-    <script src="<?= Backend::skinAsset('assets/js/custom.js') ?>"></script>
 
     <!-- core:css -->
    <!-- <link rel="stylesheet" href="<?/*= Backend::skinAsset("assets/vendors/core/core.css") */?>">-->
@@ -60,8 +59,8 @@ use System\Models\Parameter;
     <script src="<?= url('/modules/backend/widgets/lists/assets/js/october.list.js', 'core'); ?>"></script>
     <script src="<?= Backend::skinAsset('assets/vendors/loading-overlay/loadingoverlay.min.js') ?>"></script>
     <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
-    <script src="<?= url('browserify/dist/webpack.bundle.js') ?>"></script>">
-    <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
+    <script src="<?= url('browserify/dist/main.js') ?>"></script>">
+    <script src="<?= url('browserify/dist/themes/nobleui/theme.js') ?>"></script>">
     <?php $this->addCss('/plugins/demo/core/formwidgets/querybuilderwidget/assets/css/query-builder.default.min.css') ?>
 
     <?= $this->makeAssets() ?>
